Successfully configured db connection and given solution for the problem

--- a/stockflow-case-study/src/main/resources/application.properties
+++ b/stockflow-case-study/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=stockflow-case-study
+spring.datasource.url=jdbc:mysql://localhost:3306/stockflow
+spring.datasource.username=root
+spring.datasource.password=mahesh
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.port=8080
